--- a/services.html
+++ b/services.html
@@ -53,6 +53,7 @@
                     <li>2026:
 						<ul>
 							<li>[Poster Chair] The IEEE International Conference on Data Mining (ICDM'26).</li>
+							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, AI4Sciences track)</li>
 						</ul>
 					<li>2025:
                         <ul>
@@ -117,7 +118,9 @@
 				<li>International Conference on Artificial Intelligence and Statistics (AISTATS)</li>
 				<li><strong>[SPC]</strong> Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
-				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
+				<li><strong>[AC]</strong> ACM Conference on Knowledge Discovery and Data Mining (KDD, AI4Sciences track)</li>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August and February cycles)</li>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, benchmark track)</li>
 			</ul>
 		    <li>2025:  
 			<ul>
@@ -138,6 +141,7 @@
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li>IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP)</li>
 				<li>International Conference on Learning Representations (ICLR)</li>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, benchmark track)</li>
 				<li><strong>[Outstanding Reviewer]</strong> ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August and February cycles)</li>
 			</ul>
 		    <li>2024:
