--- a/services.html
+++ b/services.html
@@ -108,6 +108,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>Annual Meeting of the Association for Computational Linguistics (ACL) Rolling Review</li>
 				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
 				<li>International Conference on Machine Learning (ICML)</li>
