--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 		<li>[01/2026] One paper is accepted by ICASSP.</li>
 		<li>[01/2026] One paper is accepted by WWW.</li>
 		<li>[01/2026] I will serve as a reviewer for IJCNN 2026. </li>
+		<li>[01/2026] I will serve as a reviewer for ACL ARR 2026. </li>
 		<li>[01/2026] I received a Gift Fund from NEC Laboratories America. </li>
 		<!-- <li>[12/2025] I will serve as a reviewer for ICML 2026. </li>
 		<li>[12/2025] I will serve as a PC member for IJCAI 2026. </li>
