--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
         </div>
 
 	    
-	<p style="text-align:justify;background-color:#D7BDE2">
+	<!-- <p style="text-align:justify;background-color:#D7BDE2">
 	<strong>Call for papers</strong>: Frontiers in Big Data, Frontiers Media SA, Special Issue: <a href="https://www.frontiersin.org/research-topics/68107/ethical-artificial-intelligence-methods-and-applications">Ethical Artificial Intelligence: Methods and Applications</a>. 
 	<br>
 	<strong>Call for papers</strong>: Mathematics, MDPI, Special Issue: <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D">Advances in Trustworthy and Robust Artificial Intelligence</a>. 
 	<br>
-<!-- 	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning (ARRML @ SDM 2025)</a>. -->
-<!-- 	<br>
-	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare (TrustML4Health @ IEEE BigData 2024)</a>. -->
-	</p>
+	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/arrml-25/home">The 2nd Workshop on Advances in Robust and Reliable Machine Learning (ARRML @ SDM 2025)</a>. 
+ 	<br>
+	<strong>Call for papers</strong>: <a href="https://sites.google.com/view/trustml4health24/">The 1st Workshop on Trustworthy Machine Learning for Healthcare (TrustML4Health @ IEEE BigData 2024)</a>.
+	</p> -->
 
 	    
 
@@ -103,6 +103,7 @@
 	    <ul>
 		<li>[02/2026] I will serve as an AC for KDD 2026 (AI4Sciences track). </li>
 		<li>[01/2026] I will serve as a reviewer for ECML-PKDD 2026. </li>
+		<li>[01/2026] I will serve as the editor of the Journal of Data Science and Analytics </li>
 		<li>[01/2026] One paper is accepted by ICASSP.</li>
 		<li>[01/2026] One paper is accepted by WWW.</li>
 		<li>[01/2026] I will serve as a reviewer for IJCNN 2026. </li>
