--- a/services.html
+++ b/services.html
@@ -96,6 +96,7 @@
 
             <p><strong>Journal Editorial Board </strong></p>
             <ul>
+				<li>[Editor] International Journal of Data Science and Analytics (IF=2.8), Springer Nature, since 2026. </li>
 				<li>[Guest Editor] Frontiers in Big Data (IF=2.4), Frontiers Media SA, <a href="https://www.frontiersin.org/research-topics/68107/ethical-artificial-intelligence-methods-and-applications"> Special Issue: Ethical Artificial Intelligence: Methods and Applications</a>, since 2024.</li>
                 <li>[Guest Editor] Mathematics (IF=2.3), MDPI, <a href="https://www.mdpi.com/journal/mathematics/special_issues/2496644R7D"> Special Issue: Advances in Trustworthy and Robust Artificial Intelligence</a>, since 2024.</li>
                 <li>[Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
