--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	    <ul>
 		<li>[02/2026] I will serve as an AC for KDD 2026 (AI4Sciences track). </li>
 		<li>[01/2026] I will serve as a reviewer for ECML-PKDD 2026. </li>
-		<li>[01/2026] I will serve as the editor of the Journal of Data Science and Analytics </li>
+		<li>[01/2026] I will serve as the editor of the International Journal of Data Science and Analytics </li>
 		<li>[01/2026] One paper is accepted by ICASSP.</li>
 		<li>[01/2026] One paper is accepted by WWW.</li>
 		<li>[01/2026] I will serve as a reviewer for IJCNN 2026. </li>
