--- a/services.html
+++ b/services.html
@@ -54,6 +54,7 @@
 						<ul>
 							<li>[Poster Chair] The IEEE International Conference on Data Mining (ICDM'26).</li>
 							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, AI4Sciences track)</li>
+							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, Research track)</li>
 						</ul>
 					<li>2025:
                         <ul>
