--- a/services.html
+++ b/services.html
@@ -122,7 +122,8 @@
 				<li><strong>[SPC]</strong> Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)</li>
 				<li>AAAI Conference on Artificial Intelligence (AAAI)</li>
 				<li><strong>[AC]</strong> ACM Conference on Knowledge Discovery and Data Mining (KDD, AI4Sciences track)</li>
-				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August and February cycles)</li>
+				<li><strong>[AC]</strong> ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, February cycle)</li>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
 				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, benchmark track)</li>
 			</ul>
 		    <li>2025:  
