--- a/services.html
+++ b/services.html
@@ -124,7 +124,7 @@
 				<li><strong>[AC]</strong> ACM Conference on Knowledge Discovery and Data Mining (KDD, AI4Sciences track)</li>
 				<li><strong>[AC]</strong> ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, February cycle)</li>
 				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, research track, August cycle)</li>
-				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, benchmark track)</li>
+				<li>ACM Conference on Knowledge Discovery and Data Mining (KDD, benchmark track, August and February cycles)</li>
 			</ul>
 		    <li>2025:  
 			<ul>
