--- a/services.html
+++ b/services.html
@@ -110,6 +110,7 @@
             <ul>
 		    <li>2026:
 			<ul>
+				<li>ACM International Conference on Multimedia (MM)</li>
 				<li>Annual Meeting of the Association for Computational Linguistics (ACL) Rolling Review</li>
 				<li>European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD)</li>
 				<li>International Joint Conference on Neural Networks (IJCNN)</li>
