--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
+		<li>[02/2026] I will serve as an PC member for ACM MM 2026. </li>
 		<li>[02/2026] I will serve as an AC for KDD 2026 (Research track). </li>
 		<li>[02/2026] I will serve as an AC for KDD 2026 (AI4Sciences track). </li>
 		<li>[01/2026] I will serve as a reviewer for ECML-PKDD 2026. </li>
@@ -110,6 +111,7 @@
 		<li>[01/2026] I will serve as a reviewer for IJCNN 2026. </li>
 		<li>[01/2026] I will serve as a reviewer for ACL ARR 2026. </li>
 		<li>[01/2026] I received a Gift Fund from NEC Laboratories America. </li>
+			
 		<!-- <li>[12/2025] I will serve as a reviewer for ICML 2026. </li>
 		<li>[12/2025] I will serve as a PC member for IJCAI 2026. </li>
 		<li>[11/2025] I will serve as the Poster Chair for ICDM 2026.</li>
