--- a/services.html
+++ b/services.html
@@ -214,6 +214,10 @@
 
             <p><strong>Journal Reviewer </strong></p>
             <ul>
+			<li>2026:
+			<ul>
+				<li>ACM Computing Survey</li>
+			</ul>
 		    <li>2025:
 			<ul>
 				<li>JMIR Medical Education</li>
