--- a/services.html
+++ b/services.html
@@ -52,6 +52,7 @@
             <ul>
                     <li>2026:
 						<ul>
+							<li>[PhD Forum Chair] <a href="https://events.engineering.asu.edu/ieee-bigdata-2026/">The IEEE International Conference on Big Data</a> (IEEE BigData'26)</li>
 							<li>[Poster Chair] The IEEE International Conference on Data Mining (ICDM'26).</li>
 							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, AI4Sciences track)</li>
 							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, Research track)</li>
