--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 
 	<h4>News [<img src="./index_files//update.gif">]</h4>
 	    <ul>
-		<li>[02/2026] I will serve as an PC member for ACM MM 2026. </li>
+		<li>[02/2026] I will serve as the PhD Forum Chair for IEEE BigData 2026. </li>
+		<li>[02/2026] I will serve as a PC member for ACM MM 2026. </li>
 		<li>[02/2026] I will serve as an AC for KDD 2026 (Research track). </li>
 		<li>[02/2026] I will serve as an AC for KDD 2026 (AI4Sciences track). </li>
 		<li>[01/2026] I will serve as a reviewer for ECML-PKDD 2026. </li>
