--- a/students.html
+++ b/students.html
@@ -142,6 +142,7 @@
             <div>
             <p><strong>Thesis Committee</strong></p>
             	<ul>
+                    <li>Kofi Nketia Ackaah-Gyasi, Ph.D. student, Department of Computer Science, Baylor University, 2028 (expected) </li>
                     <li>Hunter Buttrum, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2027 (expected)</li>
             		<li>Joseph Yu, Ph.D. student, Department of Computer Science, Baylor University, 2026 (expected) </li>
                     <li>Evan Collins, Ph.D. student, Department of Physics and Astronomy, Baylor University, 2026 (expected)</li>
