--- a/teaching.html
+++ b/teaching.html
@@ -48,6 +48,12 @@
             
             <p><strong>Baylor University</strong></p>
             	<ul>
+                    <li>Summer 2026</li>
+                    <ul>
+                        <li>CSI 5328 - Artificial Intelligence</li>
+                        <li>DSC 4310 - Machine Learning </li>
+                    </ul>
+                    
                     <li>Spring 2026</li>
                     <ul>
                         <li>DSC 3334 - Algorithms and Data Structures </li>
