--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
 							<li>[Organizer, Chair] The 5th Workshop on Ethical Artificial Intelligence: Methods and Applications (EAI @ KDD'26).</li>
 			                <li>[Organizer, Chair] The 5th Workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM @ KDD'26).</li>
 							<li>[PhD Forum Chair] <a href="https://events.engineering.asu.edu/ieee-bigdata-2026/">The IEEE International Conference on Big Data</a> (IEEE BigData'26)</li>
-							<li>[Poster Chair] The IEEE International Conference on Data Mining (ICDM'26).</li>
+							<li>[Poster Chair] <a href="http://icdm2026.neu.edu.cn/_s271/orgcmte/list.psp">The IEEE International Conference on Data Mining</a> (ICDM'26).</li>
 							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, AI4Sciences track)</li>
 							<li>[Area Chair] ACM Conference on Knowledge Discovery and Data Mining (KDD'26, Research track)</li>
 						</ul>
